argocd/apps/media-server/maintainerr/manifests/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: maintainerr
  name: maintainerr
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: maintainerr
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/jorenn92/maintainerr:latest
          imagePullPolicy: IfNotPresent
          name: maintainerr
          ports:
            - containerPort: 6246
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /opt/data
              name: maintainerr-config
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: maintainerr-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
