argocd/apps/media-server/maintainerr/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maintainerr
  name: maintainerr
spec:
  ports:
    - name: "http"
      port: 6246
      targetPort: 6246
  selector:
    app: maintainerr
